Remove amusement park capital and total area and add owner visitor, increase owner money now, add coupon.